[gd_scene load_steps=7 format=3 uid="uid://dnskhem67g14t"]

[ext_resource type="Script" uid="uid://brwee2xgcegkd" path="res://scripts/battle/battle.gd" id="1_dn72j"]
[ext_resource type="PackedScene" uid="uid://coqj1y2pw7q3s" path="res://scenes/ants/ant_bite_spawner.tscn" id="2_p1qf1"]
[ext_resource type="PackedScene" uid="uid://bwyqfioglhi6o" path="res://scenes/ants/ants_spawner.tscn" id="4_a12nh"]
[ext_resource type="PackedScene" uid="uid://kn6sfo1y22m2" path="res://scenes/bosses/bosses_spawner.tscn" id="4_lpir7"]

[sub_resource type="Gradient" id="Gradient_p1qf1"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a12nh"]
gradient = SubResource("Gradient_p1qf1")

[node name="Battle" type="Node2D"]
script = ExtResource("1_dn72j")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-43, -64)
scale = Vector2(7.87891, 1217)
texture = SubResource("GradientTexture1D_a12nh")
centered = false

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AntBiteSpawner" parent="." instance=ExtResource("2_p1qf1")]

[node name="AntsSpawner" parent="." instance=ExtResource("4_a12nh")]

[node name="BossesSpawner" parent="." instance=ExtResource("4_lpir7")]

[node name="Ants" type="Node2D" parent="."]

[node name="BossHP" type="ProgressBar" parent="."]
offset_left = 575.0
offset_top = 37.0
offset_right = 1575.0
offset_bottom = 129.0
theme_override_font_sizes/font_size = 64
value = 100.0

[connection signal="gui_input" from="Sprite2D/ColorRect" to="." method="_on_color_rect_gui_input"]
